--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:all": "concurrently \"pnpm run dev:webhook\" \"pnpm run dev\"",
+    "dev:webhook": "ngrok http --url=brave-tahr-remotely.ngrok-free.app 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -41,6 +43,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "concurrently": "^9.1.2",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
@@ -56,6 +59,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
+    "svix": "^1.64.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
