--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@trpc/client": "^11.1.0",
     "@trpc/react-query": "^11.1.0",
     "@trpc/server": "^11.1.0",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.8",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -60,11 +62,13 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
+    "superjson": "^2.2.2",
     "svix": "^1.64.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
