--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.14.3",
     "@hookform/resolvers": "^5.0.1",
+    "@mux/mux-node": "^11.0.2",
+    "@mux/mux-uploader-react": "^1.2.0",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
