--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^6.14.3",
     "@hookform/resolvers": "^5.0.1",
     "@mux/mux-node": "^11.0.2",
+    "@mux/mux-player-react": "^3.3.4",
     "@mux/mux-uploader-react": "^1.2.0",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -56,6 +57,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
+    "drizzle-zod": "^0.7.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
