--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@uploadthing/react": "^7.3.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.8",
+    "@upstash/workflow": "^0.2.12",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -64,6 +65,7 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "openai": "^4.95.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
